--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# SDK
+sdk
+
 # Logs
 logs
 *.log
@@ -35,7 +38,6 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-sdk/
 
 # TypeScript v1 declaration files
 typings/
