--- a/package.json
+++ b/package.json
@@ -1,25 +1,36 @@
 {
-  "name": "jaam",
-  "version": "1.0.0",
-  "description": "DeveloperWeek NYC Hackathon",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ark234/JAAM.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ark234/JAAM/issues"
-  },
-  "homepage": "https://github.com/ark234/JAAM#readme",
-  "dependencies": {
-    "axios": "^0.18.0",
-    "dotenv": "^6.0.0",
-    "firebase": "^5.0.4",
-    "moment": "^2.22.2"
-  }
+	"name": "jaam",
+	"version": "1.0.0",
+	"description": "DeveloperWeek NYC Hackathon",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node index.js",
+		"dev": "nodemon -e html,css,js index.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/ark234/JAAM.git"
+	},
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/ark234/JAAM/issues"
+	},
+	"homepage": "https://github.com/ark234/JAAM#readme",
+	"dependencies": {
+		"axios": "^0.18.0",
+		"bcryptjs": "^2.4.3",
+		"body-parser": "^1.18.3",
+		"cookie-parser": "^1.4.3",
+		"dotenv": "^6.0.0",
+		"express": "^4.16.3",
+		"express-session": "^1.15.6",
+		"moment": "^2.22.2",
+		"morgan": "^1.9.0",
+		"mustache-express": "^1.2.6",
+		"passport": "^0.4.0",
+		"passport-local": "^1.0.0",
+		"pg-promise": "^8.4.4"
+	}
 }
