--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
 	"version": "1.0.0",
 	"description": "DeveloperWeek NYC Hackathon",
 	"main": "index.js",
+	"engines": {
+		"node": "10.4.0",
+		"npm": "6.1.0"
+	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "node index.js",
